Reorganize tests to prepare them for more database systems

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,46 +6,24 @@ project(firfuorida_tests)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Test REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} 5.6.0 REQUIRED COMPONENTS Test)
 
-add_library(migrationtest STATIC migrationtestobject.cpp migrationtestobject.h)
-
-target_compile_features(migrationtest
-    PRIVATE
-        cxx_auto_type
-    PUBLIC
-        cxx_nullptr
-        cxx_override
-)
-
-if (ENABLE_ASAN)
-    target_link_libraries(migrationtest
-        PRIVATE
-            asan
-    )
-    target_compile_options(migrationtest
-        PRIVATE
-            -fsanitize=address
-            -fno-omit-frame-pointer
-            -Wformat
-            -Werror=format-security
-            -Werror=array-bounds
-            -g
-            -ggdb
-    )
-    set_target_properties(migrationtest PROPERTIES
-        LINK_FLAGS -fsanitize=address
-    )
-endif (ENABLE_ASAN)
-
-target_link_libraries(migrationtest
-    PUBLIC
-        Qt${QT_VERSION_MAJOR}::Core
-        Qt${QT_VERSION_MAJOR}::Sql
-        Qt${QT_VERSION_MAJOR}::Test
-        FirfuoridaQt${QT_VERSION_MAJOR}
+set(testmigration_SRCS
+    migrations/m20220119t181049_tiny.h
+    migrations/m20220119t181049_tiny.cpp
+    migrations/m20220119t181249_small.h
+    migrations/m20220119t181249_small.cpp
+    migrations/m20220119t181401_medium.h
+    migrations/m20220119t181401_medium.cpp
+    migrations/m20220119t181501_big.h
+    migrations/m20220119t181501_big.cpp
 )
 
 function(firfuorida_test _testname _link1 _link2 _link3)
-    add_executable(${_testname}_exec ${_testname}.cpp)
+    add_executable(${_testname}_exec
+        ${_testname}.cpp
+        testmigrations.h
+        testmigrations.cpp
+        ${testmigration_SRCS}
+    )
     add_test(NAME ${_testname} COMMAND ${_testname}_exec)
     if (ENABLE_ASAN)
         target_link_libraries(${_testname}_exec
@@ -66,8 +44,17 @@ function(firfuorida_test _testname _link1 _link2 _link3)
             LINK_FLAGS -fsanitize=address
         )
     endif (ENABLE_ASAN)
-    target_link_libraries(${_testname}_exec PRIVATE migrationtest ${_link1} ${_link2} ${_link3})
+    target_link_libraries(${_testname}_exec
+        PUBLIC
+            Qt${QT_VERSION_MAJOR}::Core
+            Qt${QT_VERSION_MAJOR}::Sql
+            Qt${QT_VERSION_MAJOR}::Test
+            FirfuoridaQt${QT_VERSION_MAJOR}
+            ${_link1}
+            ${_link2}
+            ${_link3}
+    )
     set_property(TEST ${_testname} PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/Firfuorida")
 endfunction(firfuorida_test _testname _link1 _link2 _link3)
 
-firfuorida_test(testmigration "" "" "")
+firfuorida_test(testmysqlmigrations "" "" "")
