Add version() function to return library version

--- a/Firfuorida/CMakeLists.txt
+++ b/Firfuorida/CMakeLists.txt
@@ -60,6 +60,7 @@ target_compile_definitions(FirfuoridaQt${QT_VERSION_MAJOR}
         QT_NO_SIGNALS_SLOTS_KEYWORDS
         QT_USE_FAST_OPERATOR_PLUS
         QT_DISABLE_DEPRECATED_BEFORE=0x050900
+        FIRFUORIDA_VERSION="${PROJECT_VERSION}"
         $<$<NOT:$<CONFIG:Debug>>:QT_NO_DEBUG_OUTPUT>
 )
 
