--- a/cmake/modules/Firfuorida-config.cmake.in
+++ b/cmake/modules/Firfuorida-config.cmake.in
@@ -8,4 +8,4 @@ SET(prefix "@CMAKE_INSTALL_PREFIX@")
 SET(exec_prefix "@CMAKE_INSTALL_PREFIX@")
 SET(FirfuoridaQt@QT_VERSION_MAJOR@_FOUND "TRUE")
 
-include("${CMAKE_CURRENT_LIST_DIR}/FuotenQt${QT_VERSION_MAJOR}Targets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/FirfuoridaQt@QT_VERSION_MAJOR@Targets.cmake")
