--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,6 @@ jobs:
       matrix:
         os: [ubuntu-20.04]
         qt_version: [512]
-        mysql_type: [mariadb]
         include:
           - qt_version: 512
             qt_version_full: 5.12.10
@@ -36,7 +35,7 @@ jobs:
       run: |
         sudo apt-add-repository --yes ppa:beineri/opt-qt-${{ matrix.qt_version_full }}-${{ matrix.ubuntu_name }}
         sudo apt-get update -qq
-        sudo apt-get install -y qt${{ matrix.qt_version}}base qt${{ matrix.qt_version }}tools ${{ matrix.mysql_type }}-server
+        sudo apt-get install -y qt${{ matrix.qt_version}}base qt${{ matrix.qt_version }}tools
         export CMAKE_PREFIX_PATH=/opt/qt${{ matrix.qt_version }}
 
     - name: Configure CMake
