--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: (C) 2019-2022 Matthias Fehring <https://www.huessenbergnetz.de>
+# SPDX-License-Identifier: LGPL-3.0-or-later
+
 # C++ objects and libs
 *.slo
 *.lo
@@ -41,3 +44,6 @@ target_wrapper.*
 
 # QtCreator CMake
 CMakeLists.txt.user*
+
+# System stuff
+.directory
