--- a/cmake/modules/Firfuorida-config-version.cmake.in
+++ b/cmake/modules/Firfuorida-config-version.cmake.in
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: (C) 2019-2022 Matthias Fehring <https://www.huessenbergnetz.de>
+# SPDX-License-Identifier: LGPL-3.0-or-later
+
 SET(PACKAGE_VERSION @PROJECT_VERSION@)
 IF (PACKAGE_FIND_VERSION VERSION_EQUAL PACKAGE_VERSION)
   SET(PACKAGE_VERSION_EXACT "true")
