--- a/cmake/modules/Firfuorida-config.cmake.in
+++ b/cmake/modules/Firfuorida-config.cmake.in
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: (C) 2019-2022 Matthias Fehring <https://www.huessenbergnetz.de>
+# SPDX-License-Identifier: LGPL-3.0-or-later
+
 # - Config information for Firfuorida
 # This file defines:
 #
