--- a/.obs/workflows.yml
+++ b/.obs/workflows.yml
@@ -3,8 +3,11 @@
 
 rebuild_master:
   steps:
-    - rebuild_package:
+    - trigger_services:
         project: home:buschmann23:Qt5:devel
         package: libFirfuoridaQt5
   filters:
     event: push
+    branches:
+      only:
+        - master
