[OBS worker] add Qt6 project and package to trigger services

--- a/.obs/workflows.yml
+++ b/.obs/workflows.yml
@@ -6,6 +6,9 @@ rebuild_master:
     - trigger_services:
         project: home:buschmann23:Qt5:devel
         package: libFirfuoridaQt5
+    - trigger_services:
+        project: home:buschmann23:Qt6:devel
+        package: libFirfuoridaQt6
   filters:
     event: push
     branches:
