--- a/cmake/modules/Firfuorida-config.cmake.in
+++ b/cmake/modules/Firfuorida-config.cmake.in
@@ -1,14 +1,12 @@
 # SPDX-FileCopyrightText: (C) 2019-2022 Matthias Fehring <https://www.huessenbergnetz.de>
 # SPDX-License-Identifier: LGPL-3.0-or-later
 
-# - Config information for Firfuorida
-# This file defines:
-#
-#  FirfuoridaQt@QT_VERSION_MAJOR@_INCLUDE_DIR - the Firfuorida include directory
-#  FirfuoridaQt@QT_VERSION_MAJOR@_LIBRARY - Link these to use Firfuorida
+@PACKAGE_INIT@
 
-SET(prefix "@CMAKE_INSTALL_PREFIX@")
-SET(exec_prefix "@CMAKE_INSTALL_PREFIX@")
-SET(FirfuoridaQt@QT_VERSION_MAJOR@_FOUND "TRUE")
+include(CMakeFindDependencyMacro)
+find_dependency(Qt6Core)
+find_dependency(Qt6Sql)
 
 include("${CMAKE_CURRENT_LIST_DIR}/FirfuoridaQt@QT_VERSION_MAJOR@Targets.cmake")
+
+check_required_components(FirfuoridaQt@QT_VERSION_MAJOR@)
