--- a/cmake/modules/Firfuorida-config.cmake.in
+++ b/cmake/modules/Firfuorida-config.cmake.in
@@ -4,8 +4,8 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
-find_dependency(Qt6Core)
-find_dependency(Qt6Sql)
+find_dependency(Qt@QT_VERSION_MAJOR@Core)
+find_dependency(Qt@QT_VERSION_MAJOR@Sql)
 
 include("${CMAKE_CURRENT_LIST_DIR}/FirfuoridaQt@QT_VERSION_MAJOR@Targets.cmake")
 
