--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: (C) 2019-2022 Matthias Fehring <https://www.huessenbergnetz.de>
+# SPDX-FileCopyrightText: (C) 2019-2025 Matthias Fehring <https://www.huessenbergnetz.de>
 # SPDX-License-Identifier: LGPL-3.0-or-later
 
 name: test
@@ -9,54 +9,63 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Debug
-
 jobs:
   build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    
+
+    runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
-        os: [ubuntu-20.04]
-        qt_version: [512, 514, 515]
-        include:
-          - qt_version: 512
-            qt_version_full: 5.12.10
-          - qt_version: 514
-            qt_version_full: 5.14.2
-          - qt_version: 515
-            qt_version_full: 5.15.4
-          - os: ubuntu-20.04
-            ubuntu_name: focal
-
-    runs-on: ubuntu-20.04
+        os:
+          - ubuntu-latest
+        build_type:
+          - Debug
+          - Release
+        config:
+          - qt_version: "5.15.*"
+          - qt_version: "6.5.*"
+          - qt_version: "6.8.*"
 
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Install Dependencies
-      run: |
-        sudo apt-add-repository --yes ppa:beineri/opt-qt-${{ matrix.qt_version_full }}-${{ matrix.ubuntu_name }}
-        sudo apt-get update -qq
-        sudo apt-get install -y qt${{ matrix.qt_version}}base qt${{ matrix.qt_version }}tools
-        export CMAKE_PREFIX_PATH=/opt/qt${{ matrix.qt_version }}
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y mariadb-server postgresql
 
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DENABLE_TESTS:BOOL=ON
+      - name: Install Qt with options and default aqtversion
+        uses: jurplel/install-qt-action@v4
+        with:
+          aqtversion: null  # use whatever the default is
+          version: ${{ matrix.config.qt_version }}
+          cache: true
 
-    - name: Build
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      - name: Install ninja-build tool (must be after Qt due PATH changes)
+        uses: turtlesec-no/get-ninja@main
 
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
-      
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Configure project
+        run: >
+          cmake -S . -B ./build -G Ninja
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DENABLE_TESTS:BOOL=ON
+
+      - name: Build project
+        run: cmake --build ./build
+
+      - name: Run tests
+        id: ctest
+        if: ${{ matrix.build_type == 'Debug' }}
+        run: ctest --test-dir ./build -C ${{ matrix.build_type }} --output-on-failure
+
+      - name: Read tests log when it fails
+        uses: andstor/file-reader-action@v1
+        if: ${{ failure() && steps.ctest.conclusion == 'failure' }}
+        with:
+          path: "./build/Testing/Temporary/LastTest.log"
